# federated-learning-framework

./: .gitignore  README.md
federated_app/: LICENSE  MANIFEST.in  centralized_training_result.json  pyproject.toml  setup.py
federated_app/configs/: federated_dataset.json  federated_dataset_2.json  federated_dataset_prezentare.json  federated_server.json  federated_server_2.json  federated_server_3.json  federated_server_prezentare.json  generate_model.json  generate_model_prezentare.json  m.py
federated_app/docs/: debug android.txt  poetry_info.text  refactor_server.text  steps for future.txt
federated_app/federated_app/federated_dataset/builder/: dataset_builder.py
federated_app/federated_app/federated_dataset/convertor/: dataset_convertor.py
federated_app/federated_app/federated_dataset/data_structures/: image_format.py  image_loader.py  image_shape.py  point.py  ratio.py  resize_method.py
federated_app/federated_app/federated_dataset/dataset/: dataset_params.py
federated_app/federated_app/federated_dataset/utils/: image_preprocessing.py
federated_app/federated_app/federated_server/Utils/: array_converter.py  ip_validation.py  weights_converter.py
federated_app/federated_app/federated_server/models/: model.py  model_architecture.py
federated_app/federated_app/federated_server/server/: server.py
federated_app/federated_app/federated_server/strategy/: FedAdamAndroid.py  (+6 more)
federated_app/federated_app/flask_server/: model_server.py
federated_app/federated_app/model_convertor/: generate_model.py  generate_tflite_model.py  transfer_learning_model.py
(+52 files in other folders)
